--- a/computec.html
+++ b/computec.html
@@ -191,31 +191,33 @@ Todos estos conceptos los integramos para poder así enseñar el manejo de la te
       </ul>
     </div>
 
+    <!-- Información del Maestro -->
+    <div class="info-card">
+      <h3><i class="fas fa-user-graduate"></i>Información del Maestro</h3>
+      <p><strong>Nombre:</strong> Roberto Vazquez Vazquez</p>
+      <p><strong>Años de experiencia:</strong> 10 años</p>
+      <p><strong>Correo electrónico:</strong> de167766@miescuela.pr</p>
+    </div>
+
     <!-- Cursos Principales -->
     <div class="info-card">
       <h3><i class="fas fa-book"></i>Cursos Principales</h3>
       <div class="row">
         <div class="col-md-6">
           <ul class="feature-list">
-            <li><i class="fas fa-code"></i>Programación en Python</li>
-            <li><i class="fas fa-code"></i>Programación en Java</li>
-            <li><i class="fas fa-code"></i>Programación en C++</li>
-            <li><i class="fas fa-globe"></i>Desarrollo web</li>
-            <li><i class="fas fa-mobile-alt"></i>Aplicaciones móviles</li>
+            <li><i class="fas fa-tools"></i>Reparacion de computadoras y administracion de redes.</li>
+            <li><i class="fas fa-bolt"></i>Electricidad basica tecnicos de computadora.</li>
+            <li><i class="fas fa-database"></i>Data Recovery</li>
+            <li><i class="fas fa-cloud"></i>Cloud computing</li>
+            <li><i class="fas fa-shield-alt"></i>Cybersecurity</li>
+            <li><i class="fas fa-code"></i>Programacion basica</li>
+            <li><i class="fas fa-robot"></i>Inteligencia Artificial</li>
+            <li><i class="fas fa-gamepad"></i>Gaming</li>
+            <li><i class="fas fa-print"></i>3D printer</li>
+            <li><i class="fas fa-vr-cardboard"></i>Realidad virtual</li>
           </ul>
         </div>
-        <div class="col-md-6">
-          <ul class="feature-list">
-            <li><i class="fas fa-network-wired"></i>Redes de computadoras</li>
-            <li><i class="fas fa-shield-alt"></i>Ciberseguridad</li>
-            <li><i class="fas fa-hdd"></i>Mantenimiento de hardware</li>
-            <li><i class="fas fa-database"></i>Bases de datos</li>
-            <li><i class="fas fa-cogs"></i>Sistemas operativos</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
+       
     <!-- Oportunidades de Empleo -->
     <div class="info-card">
       <h3><i class="fas fa-briefcase"></i>Oportunidades de Empleo</h3>
