--- a/cosmetologia.html
+++ b/cosmetologia.html
@@ -187,6 +187,14 @@
       </ul>
     </div>
 
+    <!-- Información del Maestro -->
+    <div class="info-card">
+      <h3><i class="fas fa-user-graduate"></i>Información del Maestro</h3>
+      <p><strong>Nombre:</strong> [Nombre del Maestro]</p>
+      <p><strong>Años de experiencia:</strong> 9 años</p>
+      <p><strong>Correo electrónico:</strong> maestro@escuela.com</p>
+    </div>
+
     <!-- Cursos Principales -->
     <div class="info-card">
       <h3><i class="fas fa-book"></i>Cursos Principales</h3>
