--- a/index.html
+++ b/index.html
@@ -466,10 +466,7 @@
     <div class="container">
       <h2>Sobre Casa Abierta</h2>
       <div class="row">
-        <div class="col-lg-6">
-          <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-4.0.3&auto=format&fit=crop&w=2071&q=80" alt="Casa Abierta" class="img-fluid rounded">
-        </div>
-        <div class="col-lg-6 about-text">
+        <div class="col-12 text-center about-text">
           <h3>Nuestra Misión</h3>
           <p>Casa Abierta es un centro educativo y comunitario dedicado a proporcionar oportunidades de aprendizaje excepcionales y fomentar el desarrollo integral de individuos y comunidades. Creemos en el poder transformador de la educación y trabajamos incansablemente para crear un entorno donde todos puedan prosperar.</p>
           <h3>Nuestra Visión</h3>
@@ -531,7 +528,7 @@
               <i class="fas fa-clock"></i>
               <div>
                 <p><strong>Horario:</strong></p>
-                <p>Lunes - Viernes: 7:00 AM - 2:30 PM</p>
+                <p>Lunes - Viernes: 7:30 AM - 2:30 PM</p>
               </div>
             </div>
           </div>
@@ -548,10 +545,8 @@
           <h3>Casa Abierta</h3>
           <p>Un espacio donde la educación y la comunidad se unen para crear oportunidades ilimitadas.</p>
           <div class="social-links">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.facebook.com/p/Escuela-Superior-Vocacional-Pablo-Col%C3%B3n-Berdecia-100057389681928/?locale=es_LA" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
+
           </div>
         </div>
         <div class="col-lg-4">
@@ -563,17 +558,10 @@
             <li><a href="#contacto">Contacto</a></li>
           </ul>
         </div>
-        <div class="col-lg-4">
-          <h3>Newsletter</h3>
-          <p>Suscríbete para recibir las últimas noticias y eventos.</p>
-          <div class="input-group mb-3">
-            <input type="email" class="form-control" placeholder="Tu email">
-            <button class="btn btn-submit" type="button">Suscribir</button>
-          </div>
-        </div>
+
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2024 Casa Abierta. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Casa Abierta. Todos los derechos reservados.</p>
       </div>
     </div>
   </footer>
