--- a/artes-culinarias.html
+++ b/artes-culinarias.html
@@ -163,7 +163,7 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="container">
-      <h1><i class="fas fa-utensils me-3"></i>Programa de Artes Culinarias</h1>
+      <h1><i class="fas fa-utensils me-3"></i>Taller de Artes Culinarias</h1>
       <p class="lead">Cocina Profesional y Gestión Gastronómica</p>
       <span class="badge">3 años académicos</span>
     </div>
@@ -174,47 +174,53 @@
     <!-- Descripción -->
     <div class="info-card">
       <h3><i class="fas fa-info-circle"></i>Descripción del Programa</h3>
-      <p>El programa de Artes Culinarias desarrolla habilidades culinarias profesionales, enseñando técnicas de cocina internacional, gestión de restaurantes y principios de nutrición. Aprenderás a crear experiencias gastronómicas excepcionales y gestionar operaciones culinarias con estándares profesionales.</p>
+      <p>El curso de Artes Culinarias, en la actualidad, es uno de los de mayor demanda ocupacional. La industria de los alimentos está en crecimiento a nivel mundial y, las oportunidades son muchas y variadas. A través del curso, se pretende lograr la capacitación y el desarrollo de destrezas que les permitan a sus estudiantes desempeñarse con seguridad y profesionalismo. El currículo de Artes Culinarias ofrece aspectos básicos relacionados con la historia de la gastronomía e higiene de los empleados, enfermedades transmitidas por alimentos, planificación y uso efectivo del tiempo, confección de menús variados, interpretación  de recetas, selección y conservación de los utensilios de cocina, compra y almacenaje, apricación de principios de cocinas, así como, otros conocimientos.
     </div>
-
-      <!-- Requisitos -->
+    
+    <!-- Requisitos -->
+    
     <div class="info-card">
       <h3><i class="fas fa-clipboard-check"></i>Requisitos de Admisión</h3>
       <ul class="feature-list">
-        <li><i class="fas fa-graduation-cap"></i>Promedio: 2.50 en adelante</li>
-        <li><i class="fas fa-birthday-cake"></i>Interes en aprender sobre artes culinarias</li>
-        <li><i class="fas fa-handshake"></i>Entrevista de admisión</li>
+        <li><i class="fas fa-graduation-cap"></i>Promedio general 2.00 o más</li>
+        <li><i class="fas fa-birthday-cake"></i>Solicitud de admisión</li>
+        <li><i class="fas fa-book"></i>Transcripción de 7mo grado original e Informe de Progreso reciente</li>
+        <li><i class="fas fa-brain"></i>Prueba de conocimiento personal y destrezas básicas</li>
+        <li><i class="fas fa-envelope"></i>Entrevista realizada por el profesor de taller (si es necesaria)</li>
       </ul>
     </div>
 
     <!-- Información del Maestro -->
     <div class="info-card">
       <h3><i class="fas fa-user-graduate"></i>Información del Maestro</h3>
-      <p><strong>Nombre:</strong> [Nombre del Maestro]</p>
-      <p><strong>Años de experiencia:</strong> 11 años</p>
-      <p><strong>Correo electrónico:</strong> maestro@escuela.com</p>
+      <p><strong>Nombre:</strong> Melanie Alicea Nieves</p>
+      <p><strong>Años de experiencia:</strong> 12 años</p>
+      <p><strong>Correo electrónico:</strong> de168674@de.pr.gov</p>
     </div>
 
     <!-- Cursos Principales -->
     <div class="info-card">
-      <h3><i class="fas fa-book"></i>Cursos Principales</h3>
+      <h3><i class="fas fa-book"></i>Currículo del Curso</h3>
       <div class="row">
         <div class="col-md-6">
           <ul class="feature-list">
-            <li><i class="fas fa-utensils"></i>Técnicas básicas de cocina</li>
-            <li><i class="fas fa-globe"></i>Cocina internacional</li>
-            <li><i class="fas fa-birthday-cake"></i>Repostería y panadería</li>
-            <li><i class="fas fa-apple-alt"></i>Nutrición y dietética</li>
-            <li><i class="fas fa-utensils"></i>Cocina de fusión</li>
+            <li><i class="fas fa-utensils"></i>Fundamentos de Alimentos y Bebidas</li>
+            <li><i class="fas fa-globe"></i>Fundamentos Básicos de Artes Culinarias</li>
+            <li><i class="fas fa-birthday-cake"></i>Higiene y Saneamiento</li>
+            <li><i class="fas fa-apple-alt"></i>Destrezas Básicas de Cortes Cocción</li>
+            <li><i class="fas fa-leaf"></i>Nutrición</li>
+            <li><i class="fas fa-globe"></i>Presentación y Servicios de Alimentos</li>
+            <li><i class="fas fa-utensils"></i>Preparación de Alimentos Fríos</li>
           </ul>
         </div>
         <div class="col-md-6">
           <ul class="feature-list">
-            <li><i class="fas fa-calculator"></i>Gestión de costos</li>
-            <li><i class="fas fa-store"></i>Administración de restaurantes</li>
-            <li><i class="fas fa-shield-alt"></i>Higiene alimentaria</li>
-            <li><i class="fas fa-wine-glass"></i>Maridaje y bebidas</li>
-            <li><i class="fas fa-users"></i>Atención al cliente</li>
+            <li><i class="fas fa-calculator"></i>Confección de Menú e Interpretación de Recetas</li>
+            <li><i class="fas fa-store"></i>Estimados y Costos</li>
+            <li><i class="fas fa-shield-alt"></i>Panes, Galletas y Tartas</li>
+            <li><i class="fas fa-wine-glass"></i>Postres</li>
+            <li><i class="fas fa-users"></i>Carnes</li>
+            <li><i class="fas fa-utensils"></i>Aprendizaje Basado en el Trabajo</li>
           </ul>
         </div>
       </div>
@@ -226,18 +232,19 @@
       <div class="row">
         <div class="col-md-6">
           <ul class="feature-list">
-            <li><i class="fas fa-chef-hat"></i>Cocinero/a profesional</li>
-            <li><i class="fas fa-utensils"></i>Chef ejecutivo</li>
-            <li><i class="fas fa-birthday-cake"></i>Repostero/a especializado</li>
-            <li><i class="fas fa-utensils"></i>Sous chef</li>
+            <li><i class="fas fa-hotel"></i>Hoteles</li>
+            <li><i class="fas fa-utensils"></i>Restaurantes</li>
+            <li><i class="fas fa-birthday-cake"></i>Cruceros</li>
+            <li><i class="fas fa-utensils"></i>Cafeterías</li>
+            <li><i class="fas fa-hospital"></i>Cocinas de hospitales</li>
           </ul>
         </div>
         <div class="col-md-6">
           <ul class="feature-list">
-            <li><i class="fas fa-store"></i>Gerente de restaurante</li>
-            <li><i class="fas fa-utensils"></i>Consultor culinario</li>
-            <li><i class="fas fa-graduation-cap"></i>Instructor de cocina</li>
-            <li><i class="fas fa-concierge-bell"></i>Maître d'hôtel</li>
+            <li><i class="fas fa-store"></i>Instituciones educativas</li>
+            <li><i class="fas fa-utensils"></i>Fraternidades</li>
+            <li><i class="fas fa-graduation-cap"></i>Clubes privados</li>
+            <li><i class="fas fa-concierge-bell"></i>Cocinas industriales</li>
           </ul>
         </div>
       </div>
