--- a/computec.html
+++ b/computec.html
@@ -194,8 +194,8 @@ Todos estos conceptos los integramos para poder así enseñar el manejo de la te
     <!-- Información del Maestro -->
     <div class="info-card">
       <h3><i class="fas fa-user-graduate"></i>Información del Maestro</h3>
-      <p><strong>Nombre:</strong> Roberto Vazquez Vazquez</p>
-      <p><strong>Años de experiencia:</strong> 10 años</p>
+      <p><strong>Nombre:</strong> Roberto Vázquez Vázquez</p>
+      <p><strong>Años de experiencia:</strong> 17 años</p>
       <p><strong>Correo electrónico:</strong> de167766@miescuela.pr</p>
     </div>
 
@@ -205,12 +205,12 @@ Todos estos conceptos los integramos para poder así enseñar el manejo de la te
       <div class="row">
         <div class="col-md-6">
           <ul class="feature-list">
-            <li><i class="fas fa-tools"></i>Reparacion de computadoras y administracion de redes.</li>
+            <li><i class="fas fa-tools"></i>Reparación de computadoras y administración de redes.</li>
             <li><i class="fas fa-bolt"></i>Electricidad basica tecnicos de computadora.</li>
             <li><i class="fas fa-database"></i>Data Recovery</li>
             <li><i class="fas fa-cloud"></i>Cloud computing</li>
             <li><i class="fas fa-shield-alt"></i>Cybersecurity</li>
-            <li><i class="fas fa-code"></i>Programacion basica</li>
+            <li><i class="fas fa-code"></i>Programación básica</li>
             <li><i class="fas fa-robot"></i>Inteligencia Artificial</li>
             <li><i class="fas fa-gamepad"></i>Gaming</li>
             <li><i class="fas fa-print"></i>3D printer</li>
