--- a/cosmetologia.html
+++ b/cosmetologia.html
@@ -163,7 +163,7 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="container">
-      <h1><i class="fas fa-spa me-3"></i>Programa de Cosmetología</h1>
+      <h1><i class="fas fa-spa me-3"></i>Curso de Cosmetología</h1>
       <p class="lead">Belleza y Cuidado Personal Profesional</p>
       <span class="badge">3 años académicos</span>
     </div>
@@ -174,25 +174,34 @@
     <!-- Descripción -->
     <div class="info-card">
       <h3><i class="fas fa-info-circle"></i>Descripción del Programa</h3>
-      <p>El programa de Cosmetología enseña técnicas profesionales de belleza y cuidado personal, preparando a los estudiantes para trabajar en salones de belleza, spas y centros de estética. Aprenderás a realzar la belleza natural de las personas mediante tratamientos especializados y técnicas avanzadas.</p>
+      <p>Abarca la enseñanza y el aprendizaje de todos los conocimientos teóricos
+prácticos a la par de las destrezas y valores como: especialista de la belleza. de conformidad con los principios y conceptos establecidos a través de los estándares y competencias que sirven de fundamento para la ocupación.
+Por tal razón, el curso esta dirigido a que el estudiante logre el dominio pleno de las destrezas académicas y ocupacionales. </p>
+
+<p>El mismo responde a los requerimientos de la Junta Examinadora de
+Especialistas en belleza para lograr revalidación y licenciatura en la ocupación.</p>
+Al finalizar el curso, el estudiante completa un certiticado de horas trabajadas además de su diploma de cuarto año.</p>
+
+  <h3><i class="fas fa-info-circle"></i>Duración del Curso</h3>
+<p>El curso está diseñado para ofrecerse durante los grados 10mo, 11mo y 12mo donde el estudiante acumula 1,000 horas. El curso integra a estudiantes de Educación Especial.</p>
     </div>
 
      <!-- Requisitos -->
     <div class="info-card">
       <h3><i class="fas fa-clipboard-check"></i>Requisitos de Admisión</h3>
       <ul class="feature-list">
-        <li><i class="fas fa-graduation-cap"></i>Promedio: 2.50 en adelante</li>
-        <li><i class="fas fa-birthday-cake"></i>Interes en aprender sobre cosmetología</li>
-        <li><i class="fas fa-handshake"></i>Entrevista de admisión</li>
+        <li><i class="fas fa-graduation-cap"></i>Promedio: 2.00 o más y debe completar el 8vo grado.</li>
+        <li><i class="fas fa-birthday-cake"></i>Interes en aprender sobre cosmetología.</li>
+        <li><i class="fas fa-handshake"></i>Entrevista de admisión.</li>
       </ul>
     </div>
 
     <!-- Información del Maestro -->
     <div class="info-card">
       <h3><i class="fas fa-user-graduate"></i>Información del Maestro</h3>
-      <p><strong>Nombre:</strong> [Nombre del Maestro]</p>
-      <p><strong>Años de experiencia:</strong> 9 años</p>
-      <p><strong>Correo electrónico:</strong> maestro@escuela.com</p>
+      <p><strong>Nombre:</strong> Nivia Ortiz Montesino</p>
+      <p><strong>Años de experiencia:</strong> 20 años</p>
+      <p><strong>Correo electrónico:</strong> d20560@de.pr.gov</p>
     </div>
 
     <!-- Cursos Principales -->
