--- a/enfermeria.html
+++ b/enfermeria.html
@@ -181,7 +181,7 @@
     <div class="info-card">
       <h3><i class="fas fa-clipboard-check"></i>Requisitos de Admisión</h3>
       <ul class="feature-list">
-        <li><i class="fas fa-graduation-cap"></i>Promedio: 2.50 en adelante</li>
+        <li><i class="fas fa-graduation-cap"></i>Promedio: 3.00 en adelante</li>
         <li><i class="fas fa-birthday-cake"></i>Interes en aprender sobre enfermeria</li>
         <li><i class="fas fa-handshake"></i>Entrevista de admisión</li>
       </ul>
@@ -190,9 +190,9 @@
     <!-- Información del Maestro -->
     <div class="info-card">
       <h3><i class="fas fa-user-graduate"></i>Información del Maestro</h3>
-      <p><strong>Nombre:</strong> [Nombre del Maestro]</p>
-      <p><strong>Años de experiencia:</strong> 12 años</p>
-      <p><strong>Correo electrónico:</strong> maestro@escuela.com</p>
+      <p><strong>Nombre:</strong> Sra. Marta Ortiz Cartagena</p>
+      <p><strong>Años de experiencia:</strong> 20 años</p>
+      <p><strong>Correo electrónico:</strong> d20560@de.pr.gov</p>
     </div>
     <!-- Cursos Principales -->
     <div class="info-card">
@@ -209,7 +209,7 @@
         </div>
         <div class="col-md-6">
           <ul class="feature-list">
-            <li><i class="fas fa-ambulance"></i>Emergencias médicas</li>
+            <li><i class="fas fa-ambulance"></i>Primeros ausilios y CPR</li>
             <li><i class="fas fa-brain"></i>Salud mental</li>
             <li><i class="fas fa-microscope"></i>Microbiología</li>
             <li><i class="fas fa-gavel"></i>Ética y legislación</li>
@@ -229,6 +229,10 @@
             <li><i class="fas fa-clinic-medical"></i>Enfermero/a de clínicas</li>
             <li><i class="fas fa-icu"></i>Cuidados intensivos</li>
             <li><i class="fas fa-home"></i>Enfermero/a domiciliario</li>
+             <li><i class="fas fa-hospital"></i>Enfermero en el ejercito</li>
+            <li><i class="fas fa-clinic-medical"></i>Enfermero en laboratorio</li>
+            <li><i class="fas fa-icu"></i>Enfermeros en centros de envejecientes</li>
+            <li><i class="fas fa-home"></i>Enfermero/a pediatrico/a</li>
           </ul>
         </div>
         <div class="col-md-6">
