--- a/mercadeo.html
+++ b/mercadeo.html
@@ -132,6 +132,11 @@
       font-weight: 700;
       margin-bottom: 1rem;
     }
+
+    @media (max-width: 768px) {
+      .hero h1 { font-size: 2rem; }
+      .info-card { padding: 1.5rem; }
+    }
   </style>
 </head>
 <body>
@@ -145,22 +150,16 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html#servicios">Servicios</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html#contacto">Contacto</a>
-          </li>
+        <ul class="navbar-nav ms-auto text-center">
+          <li class="nav-item"><a class="nav-link" href="index.html#inicio"><i class="fas fa-home me-2"></i>Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#servicios"><i class="fas fa-cogs me-2"></i>Servicios</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html#contacto"><i class="fas fa-envelope me-2"></i>Contacto</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Hero Section -->
+  <!-- Hero -->
   <section class="hero">
     <div class="container">
       <h1><i class="fas fa-chart-line me-3"></i>Programa de Mercadeo</h1>
@@ -169,87 +168,71 @@
     </div>
   </section>
 
-  <!-- Content -->
+  <!-- Contenido -->
   <div class="container content-section">
+
     <!-- Descripción -->
     <div class="info-card">
       <h3><i class="fas fa-info-circle"></i>Descripción del Programa</h3>
-      <p>El programa de Mercadeo prepara a los estudiantes para comprender y aplicar estrategias de marketing efectivas en el mundo empresarial moderno, combinando teoría y práctica para desarrollar habilidades comerciales. Aprenderás a identificar oportunidades de mercado y crear estrategias que impulsen el éxito de las empresas.</p>
+      <p><strong><i class="fas fa-bullseye"></i> Misión:</strong> Promover actividades que sirvan para desarrollar líderes en los amplios y prometedores campos del mercadeo, la gerencia y el empresarismo.</p>
+      <p><strong><i class="fas fa-lightbulb"></i> Visión:</strong> Fomentar la formación integral del estudiante mediante su participación en actividades educativas que desarrollen liderazgo, creatividad e iniciativa.</p>
+      <p><i class="fas fa-hands-helping"></i> Fortalecer el espíritu de servicio y la conciencia cívica del estudiante para que sea más sensible y solidario con los demás.</p>
     </div>
 
     <!-- Requisitos -->
     <div class="info-card">
       <h3><i class="fas fa-clipboard-check"></i>Requisitos de Admisión</h3>
       <ul class="feature-list">
-        <li><i class="fas fa-graduation-cap"></i>Promedio: 2.50 en adelante</li>
-        <li><i class="fas fa-birthday-cake"></i>Intereses en aprender sobre comercio</li>
-        <li><i class="fas fa-handshake"></i>Entrevista de admisión</li>
+        <li><i class="fas fa-graduation-cap"></i>Ser graduado de noveno grado.</li>
+        <li><i class="fas fa-chart-line"></i>Índice académico mínimo de 2.00 puntos.</li>
+        <li><i class="fas fa-clipboard-list"></i>Completar solicitud de ingreso al programa.</li>
+        <li><i class="fas fa-comments"></i>Participar en entrevista de admisión.</li>
+        <li><i class="fas fa-heart"></i>Demostrar verdadero interés en el mundo de los negocios.</li>
+        <li><i class="fas fa-calculator"></i>Poseer buenas destrezas de matemáticas.</li>
+        <li><i class="fas fa-calendar-check"></i>Buena asistencia escolar.</li>
+        <li><i class="fas fa-signature"></i>Tener consentimiento de los padres.</li>
+        <li><i class="fas fa-star"></i>Mostrar habilidades como responsabilidad, iniciativa, entusiasmo y actitud positiva.</li>
       </ul>
     </div>
 
-    <!-- Información del Maestro -->
+    <!-- Maestro -->
     <div class="info-card">
       <h3><i class="fas fa-user-graduate"></i>Información del Maestro</h3>
-      <p><strong>Nombre:</strong> [Nombre del Maestro]</p>
-      <p><strong>Años de experiencia:</strong> 8 años</p>
-      <p><strong>Correo electrónico:</strong> maestro@escuela.com</p>
+      <p><strong><i class="fas fa-user"></i> Nombre:</strong> Ada J. Rivera Alejandro</p>
+      <p><strong><i class="fas fa-briefcase"></i> Años de experiencia:</strong> 20 años</p>
+      <p><strong><i class="fas fa-envelope"></i> Correo electrónico:</strong> de155982@miescuela.pr</p>
     </div>
 
     <!-- Cursos Principales -->
     <div class="info-card">
       <h3><i class="fas fa-book"></i>Cursos Principales</h3>
-      <div class="row">
-        <div class="col-md-6">
-          <ul class="feature-list">
-            <li><i class="fas fa-bullhorn"></i>Principios de mercadeo</li>
-            <li><i class="fas fa-ad"></i>Publicidad y promoción</li>
-            <li><i class="fas fa-users"></i>Comportamiento del consumidor</li>
-            <li><i class="fas fa-search"></i>Investigación de mercados</li>
-            <li><i class="fas fa-handshake"></i>Ventas y negociación</li>
-          </ul>
-        </div>
-        <div class="col-md-6">
-          <ul class="feature-list">
-            <li><i class="fas fa-hashtag"></i>Marketing digital</li>
-            <li><i class="fas fa-share-alt"></i>Redes sociales</li>
-            <li><i class="fas fa-tag"></i>Gestión de marca</li>
-            <li><i class="fas fa-chart-bar"></i>Análisis de mercado</li>
-            <li><i class="fas fa-project-diagram"></i>Estrategias comerciales</li>
-          </ul>
-        </div>
-      </div>
+      <ul class="feature-list text-center">
+        <li><i class="fas fa-handshake"></i>Ventas y Servicio al Cliente</li>
+        <li><i class="fas fa-shopping-cart"></i>Compras</li>
+        <li><i class="fas fa-calculator"></i>Finanzas</li>
+        <li><i class="fas fa-ad"></i>Publicidad</li>
+        <li><i class="fas fa-users"></i>Relaciones Públicas</li>
+        <li><i class="fas fa-box"></i>Empaque</li>
+        <li><i class="fas fa-cogs"></i>Operaciones de Negocios</li>
+        <li><i class="fas fa-chart-line"></i>Promoción de Ventas</li>
+        <li><i class="fas fa-palette"></i>Envoltura Artística</li>
+        <li><i class="fas fa-cash-register"></i>Manejo de Caja Registradora</li>
+      </ul>
     </div>
 
-    <!-- Oportunidades de Empleo -->
+    <!-- Empleo -->
     <div class="info-card">
       <h3><i class="fas fa-briefcase"></i>Oportunidades de Empleo</h3>
-      <div class="row">
-        <div class="col-md-6">
-          <ul class="feature-list">
-            <li><i class="fas fa-user-tie"></i>Ejecutivo de ventas</li>
-            <li><i class="fas fa-ad"></i>Especialista en publicidad</li>
-            <li><i class="fas fa-chart-line"></i>Analista de mercados</li>
-            <li><i class="fas fa-hashtag"></i>Community manager</li>
-          </ul>
-        </div>
-        <div class="col-md-6">
-          <ul class="feature-list">
-            <li><i class="fas fa-building"></i>Gerente de marca</li>
-            <li><i class="fas fa-bullhorn"></i>Coordinador de marketing</li>
-            <li><i class="fas fa-shopping-cart"></i>Asesor comercial</li>
-            <li><i class="fas fa-project-diagram"></i>Planificador estratégico</li>
-          </ul>
-        </div>
-      </div>
+      <p><i class="fas fa-store"></i> Los estudiantes del programa pueden desempeñarse en ventas directas, tiendas por departamentos, almacenes, decoración de vitrinas, servicio al cliente, emprendimiento y gerencia de pequeños negocios.</p>
     </div>
 
-    <!-- Highlight Box -->
+    <!-- Por qué elegir -->
     <div class="highlight-box">
       <h4><i class="fas fa-star"></i>¿Por qué elegir Mercadeo?</h4>
-      <p>En un mundo competitivo, el marketing es clave para el éxito empresarial. Nuestro programa te enseña a crear estrategias efectivas, analizar mercados y conectar con los consumidores para impulsar el crecimiento de las empresas.</p>
+      <p><i class="fas fa-bullhorn"></i> En un mundo competitivo, el marketing es clave para el éxito empresarial. Aprenderás a crear estrategias efectivas, analizar mercados y conectar con los consumidores para impulsar el crecimiento de las empresas.</p>
     </div>
 
-    <!-- Back Button -->
+    <!-- Volver -->
     <div class="text-center">
       <a href="index.html" class="btn-back">
         <i class="fas fa-arrow-left me-2"></i>Volver al Inicio
