--- a/enfermeria.html
+++ b/enfermeria.html
@@ -6,133 +6,7 @@
   <title>Enfermería - Casa Abierta</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-  <style>
-    :root {
-      --primary-color: #0033A0;
-      --secondary-color: #0066CC;
-      --accent-color: #27AE60;
-      --dark-color: #1A252F;
-      --light-color: #ECF0F1;
-    }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: var(--light-color);
-      color: var(--dark-color);
-    }
-
-    .navbar {
-      background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%) !important;
-      box-shadow: 0 4px 20px rgba(0,51,160,0.1);
-    }
-
-    .navbar-brand {
-      font-weight: 700;
-      color: white !important;
-    }
-
-    .hero {
-      background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
-      color: white;
-      padding: 4rem 0;
-      text-align: center;
-    }
-
-    .hero h1 {
-      font-size: 3rem;
-      font-weight: 800;
-      margin-bottom: 1rem;
-    }
-
-    .hero .badge {
-      background: var(--accent-color);
-      font-size: 1.2rem;
-      padding: 0.5rem 1rem;
-    }
-
-    .content-section {
-      padding: 4rem 0;
-    }
-
-    .info-card {
-      background: white;
-      border-radius: 20px;
-      padding: 2rem;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-      margin-bottom: 2rem;
-      border: 2px solid #E2E8F0;
-    }
-
-    .info-card h3 {
-      color: var(--primary-color);
-      font-weight: 700;
-      margin-bottom: 1.5rem;
-      display: flex;
-      align-items: center;
-    }
-
-    .info-card h3 i {
-      margin-right: 0.5rem;
-      color: var(--accent-color);
-    }
-
-    .feature-list {
-      list-style: none;
-      padding: 0;
-    }
-
-    .feature-list li {
-      padding: 0.5rem 0;
-      border-bottom: 1px solid #E2E8F0;
-      display: flex;
-      align-items: center;
-    }
-
-    .feature-list li:last-child {
-      border-bottom: none;
-    }
-
-    .feature-list li i {
-      color: var(--accent-color);
-      margin-right: 1rem;
-      width: 20px;
-    }
-
-    .btn-back {
-      background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-      border: none;
-      padding: 1rem 2rem;
-      border-radius: 50px;
-      color: white;
-      font-weight: 600;
-      text-decoration: none;
-      display: inline-block;
-      margin-top: 2rem;
-      transition: all 0.3s ease;
-    }
-
-    .btn-back:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 10px 20px rgba(0,51,160,0.3);
-      color: white;
-      text-decoration: none;
-    }
-
-    .highlight-box {
-      background: linear-gradient(135deg, #FFF3CD 0%, #FFEAA7 100%);
-      border: 2px solid #F39C12;
-      border-radius: 15px;
-      padding: 2rem;
-      margin: 2rem 0;
-      text-align: center;
-    }
-
-    .highlight-box h4 {
-      color: #8B4513;
-      font-weight: 700;
-      margin-bottom: 1rem;
-    }
-  </style>
+  <link href="styles.css" rel="stylesheet">
 </head>
 <body>
   <!-- Navbar -->
@@ -165,7 +39,7 @@
     <div class="container">
       <h1><i class="fas fa-user-md me-3"></i>Programa de Enfermería</h1>
       <p class="lead">Cuidado Integral de la Salud</p>
-      <span class="badge">3 años académicos</span>
+      <button class="btn btn-outline-primary">3 años académicos de Enfermería</button>
     </div>
   </section>
 
