--- a/Casa-Abierta-main/Casa-Abierta-main/index.html
+++ b/Casa-Abierta-main/Casa-Abierta-main/index.html
@@ -457,6 +457,12 @@
         <a href="artes-culinarias.html" class="workshop-btn">
           <i class="fas fa-utensils"></i>Artes Culinarias
         </a>
+        <a href="elaboracion-agricola.html" class="workshop-btn">
+          <i class="fas fa-seedling"></i>Elaboración de Productos Agrícolas
+        </a>
+        <a href="seguridad-publica.html" class="workshop-btn">
+          <i class="fas fa-shield-alt"></i>Seguridad Pública
+        </a>
       </div>
     </div>
   </section>
