--- a/Casa-Abierta-main/Casa-Abierta-main/Casa-Abierta-main/Casa-Abierta-main/index.html
+++ b/Casa-Abierta-main/Casa-Abierta-main/Casa-Abierta-main/Casa-Abierta-main/index.html
@@ -3,383 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Casa Abierta - ¡Acho, la PCB es otra cosa!</title>
+  <title>Casa Abierta - ¡Acho, la Pablo es otra cosa!</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-  <style>
-    :root {
-      --primary-color: #0033A0;
-      --secondary-color: #0066CC;
-      --accent-color: #27AE60;
-      --dark-color: #1A252F;
-      --light-color: #ECF0F1;
-    }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #E3F2FD 0%, #F8F9FA 100%);
-      min-height: 100vh;
-      color: var(--dark-color);
-    }
-
-    /* Navbar */
-    .navbar {
-      background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%) !important;
-      box-shadow: 0 4px 20px rgba(0,51,160,0.2);
-      border-bottom: 3px solid var(--accent-color);
-      position: sticky;
-      top: 0;
-      z-index: 1030;
-    }
-
-    .navbar-brand {
-      font-weight: 700;
-      font-size: 1.4rem;
-      color: white !important;
-    }
-
-    .navbar-nav {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      width: 100%;
-      text-align: center;
-    }
-
-    .nav-item {
-      margin: 0 0.5rem;
-    }
-
-    .navbar-nav .nav-link {
-      color: white !important;
-      font-weight: 500;
-      transition: all 0.3s ease;
-      position: relative;
-    }
-
-    .navbar-nav .nav-link:hover {
-      color: var(--accent-color) !important;
-    }
-
-    .navbar-nav .nav-link::after {
-      content: '';
-      position: absolute;
-      bottom: -5px;
-      left: 0;
-      width: 0;
-      height: 2px;
-      background: var(--accent-color);
-      transition: width 0.3s ease;
-    }
-
-    .navbar-nav .nav-link:hover::after {
-      width: 100%;
-    }
-
-    /* Hero Section */
-    /* Estilo del logo en la sección Hero */
-.header-gif {
-  width: 180px;                /* Tamaño base en pantallas grandes */
-  height: auto;                /* Mantiene proporción */
-  display: block;
-  margin: 0 auto 1.5rem auto;  /* Centrado y espacio inferior */
-  animation: floatLogo 4s ease-in-out infinite; /* Animación suave */
-  filter: drop-shadow(0 4px 8px rgba(0,0,0,0.25)); /* Sombra sutil */
-  transition: transform 0.3s ease, filter 0.3s ease;
-}
-
-/* Efecto hover */
-.header-gif:hover {
-  transform: scale(1.08);
-  filter: drop-shadow(0 6px 12px rgba(0,0,0,0.35));
-}
-
-/* Animación de movimiento flotante */
-@keyframes floatLogo {
-  0%, 100% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-10px);
-  }
-}
-
-/* Responsivo */
-@media (max-width: 992px) {
-  .header-gif {
-    width: 140px;
-    margin-bottom: 1rem;
-  }
-}
-
-@media (max-width: 576px) {
-  .header-gif {
-    width: 120px;
-    margin-bottom: 0.8rem;
-  }
-}
-
-    .hero {
-      background: linear-gradient(135deg, rgba(0,51,160,0.85), rgba(0,102,204,0.85)),
-                  url('Casa Abierta.jpg') center/cover no-repeat;
-      min-height: 80vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      color: white;
-      padding: 2rem;
-    }
-
-    .hero h1 {
-      font-size: 3.5rem;
-      font-weight: 800;
-      text-shadow: 3px 3px 6px rgba(0,0,0,0.3);
-    }
-
-    .hero p {
-      font-size: 1.4rem;
-      opacity: 0.95;
-      margin-bottom: 2rem;
-    }
-
-    .hero .btn {
-      background: linear-gradient(135deg, var(--accent-color), #2ECC71);
-      border: none;
-      padding: 1rem 2rem;
-      border-radius: 50px;
-      color: white;
-      font-weight: 600;
-      margin: 0.5rem;
-      transition: all 0.3s ease;
-    }
-
-    .hero .btn:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 10px 30px rgba(39,174,96,0.4);
-    }
-
-    /* Services */
-    .services {
-      padding: 5rem 0;
-      background: var(--light-color);
-    }
-
-    .services h2 {
-      text-align: center;
-      font-weight: 700;
-      color: var(--primary-color);
-      margin-bottom: 3rem;
-      position: relative;
-    }
-
-    .services h2::after {
-      content: '';
-      position: absolute;
-      bottom: -10px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 80px;
-      height: 4px;
-      background: linear-gradient(135deg, var(--primary-color), var(--accent-color));
-      border-radius: 2px;
-    }
-
-    .workshop-buttons {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1rem;
-    }
-
-    .workshop-btn {
-      background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-      border: none;
-      padding: 1rem 2rem;
-      border-radius: 50px;
-      color: white;
-      font-weight: 600;
-      text-align: center;
-      text-decoration: none;
-      transition: all 0.3s ease;
-      min-width: 200px;
-    }
-
-    .workshop-btn:hover {
-      transform: translateY(-3px);
-      background: linear-gradient(135deg, var(--secondary-color), var(--primary-color));
-    }
-
-    /* About */
-    .about {
-      background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-      color: white;
-      padding: 5rem 2rem;
-      text-align: center;
-    }
-
-    .about h2 {
-      font-weight: 700;
-      margin-bottom: 3rem;
-    }
-
-    .about p {
-      max-width: 800px;
-      margin: 0 auto 1.5rem;
-      line-height: 1.8;
-    }
-
-    /* Contact */
-    .contact {
-      background: var(--light-color);
-      padding: 5rem 2rem;
-    }
-
-    .contact h2 {
-      text-align: center;
-      color: var(--primary-color);
-      font-weight: 700;
-      margin-bottom: 3rem;
-    }
-
-    .contact .row {
-      justify-content: center;
-      align-items: flex-start;
-      gap: 2rem;
-    }
-
-    .contact-form, .contact-info {
-      background: white;
-      border-radius: 20px;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.05);
-      padding: 2rem;
-      border: 1px solid #E2E8F0;
-      width: 100%;
-      max-width: 500px;
-      margin: 0 auto;
-    }
-
-    .form-control {
-      border: 2px solid #E2E8F0;
-      border-radius: 10px;
-      padding: 0.75rem 1rem;
-      transition: all 0.3s ease;
-    }
-
-    .form-control:focus {
-      border-color: var(--primary-color);
-      box-shadow: 0 0 0 3px rgba(0,51,160,0.1);
-    }
-
-    .btn-submit {
-      background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-      border: none;
-      border-radius: 50px;
-      color: white;
-      font-weight: 600;
-      padding: 0.75rem 2rem;
-      transition: all 0.3s ease;
-    }
-
-    .btn-submit:hover {
-      transform: translateY(-3px);
-      background: linear-gradient(135deg, var(--secondary-color), var(--primary-color));
-    }
-
-    .contact-item {
-      display: flex;
-      align-items: flex-start;
-      gap: 1rem;
-      margin-bottom: 1.5rem;
-    }
-
-    .contact-item i {
-      font-size: 1.5rem;
-      color: var(--primary-color);
-    }
-
-    /* Footer */
-    footer {
-      background: var(--primary-color);
-      color: white;
-      padding: 3rem 1rem 1rem;
-      text-align: center;
-    }
-
-    footer h3 {
-      font-weight: 600;
-      margin-bottom: 1rem;
-    }
-
-    footer p, footer a {
-      color: #E2E8F0;
-      text-decoration: none;
-    }
-
-    footer a:hover {
-      color: var(--accent-color);
-    }
-
-    .social-links a {
-      display: inline-block;
-      width: 40px;
-      height: 40px;
-      background: var(--accent-color);
-      color: white;
-      border-radius: 50%;
-      text-align: center;
-      line-height: 40px;
-      margin: 0 0.25rem;
-      transition: all 0.3s ease;
-    }
-
-    .social-links a:hover {
-      transform: translateY(-3px);
-    }
-
-    .footer-bottom {
-      border-top: 1px solid #0066CC;
-      margin-top: 2rem;
-      padding-top: 1rem;
-      color: #E2E8F0;
-    }
-
-    /* Responsive tweaks */
-    /* Ajustes responsive para la sección de contacto */
-@media (max-width: 992px) {
-  .contact .row {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .contact-form, .contact-info {
-    max-width: 100%;
-    width: 90%;
-    margin: 1rem auto;
-  }
-}
-
-@media (max-width: 576px) {
-  .contact-form, .contact-info {
-    width: 100%;
-    padding: 1.5rem;
-  }
-
-  .contact h2 {
-    font-size: 1.8rem;
-  }
-
-  .contact-item {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .contact-item i {
-    margin-bottom: 0.5rem;
-  }
-}
-
-  </style>
+  <link href="styles.css" rel="stylesheet">
 </head>
 <body>
 
@@ -387,7 +14,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <i class="fas fa-home me-2"></i>Casa abierta - PCB
+        <i class="fas fa-home me-2"></i>Casa Abierta - PCB
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -406,10 +33,10 @@
   <!-- Hero -->
   <section class="hero" id="inicio">
     <div class="container">
-       <img src="Logo 3.png" alt="Logo CompuTec" class="header-gif">
-      <h1>Acho, la PCB es otra cosa...</h1>
+       <img src="LOGO6.png" alt="Logo CompuTec" class="header-gif">
+      <h1>Acho, la Pablo es otra cosa...</h1>
       <h1>¡Casa Abierta PCB!</h1>
-      <p>“Descubre tu futuro hoy ¡Ven y visitanos!”</p>
+      <p>“Descubre tu futuro hoy" ¡Ven y visitanos!</p>
       <a href="#servicios" class="btn">Explorar Servicios</a>
       <a href="#contacto" class="btn">Contáctanos</a>
     </div>
@@ -425,10 +52,21 @@
         <a href="enfermeria.html" class="workshop-btn"><i class="fas fa-stethoscope"></i>Enfermería</a>
         <a href="cosmetologia.html" class="workshop-btn"><i class="fas fa-palette"></i>Cosmetología</a>
         <a href="artes-culinarias.html" class="workshop-btn"><i class="fas fa-utensils"></i>Artes Culinarias</a>
-        <a href="elaboracion-agricolas.html" class="workshop-btn"><i class="fas fa-wheat"></i>Elaboración de Productos Agrícolas</a>
+        <a href="elaboracion-agricolas.html" class="workshop-btn"><span style="filter: brightness(0) invert(1);">🌾</span> Elaboración de Productos Agrícolas</a>
       </div>
     </div>
   </section>
+
+    <!-- Services -->
+  <section class="services" id="servicios">
+    <div class="container">
+      <h2>¡NUEVO TALLER!</h2>
+      <div class="workshop-buttons">
+        <a href="seguridad-publica.html" class="workshop-btn"><i class="fas fa-shield-alt"></i> Seguridad Pública</a>
+      </div>
+    </div>
+  </section>
+
 
   <!-- About -->
   <section class="about" id="nosotros">
