--- a/Casa-Abierta-main/Casa-Abierta-main/Casa-Abierta-main/Casa-Abierta-main/enfermeria.html
+++ b/Casa-Abierta-main/Casa-Abierta-main/Casa-Abierta-main/Casa-Abierta-main/enfermeria.html
@@ -114,7 +114,7 @@
             <li><i class="fas fa-school"></i>Enfermero/a escolar</li>
             <li><i class="fas fa-user-md"></i>Técnico en salud</li>
             <li><i class="fas fa-stethoscope"></i>Asistente médico</li>
-            <li><i class="fas fa-heart"></i>Especialista en cardiología</li>
+            <li><i class="fas fa-heart"></i>Técnico en cardiología</li>
           </ul>
         </div>
       </div>
@@ -125,6 +125,8 @@
       <h4><i class="fas fa-star"></i>¿Por qué elegir Enfermería?</h4>
       <p>La enfermería es una profesión noble que salva vidas y mejora la calidad de vida de las personas. Nuestro programa combina formación académica sólida con experiencia práctica para prepararte para una carrera gratificante en el campo de la salud.</p>
     </div>
+
+  
 
     <!-- Back Button -->
     <div class="text-center">
